Add service section

--- a/index.html
+++ b/index.html
@@ -4,19 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title>My team</title>
 </head>
 <body>
     
     <!-- site header start -->
-    <header class="site-header">
-
+    <header class="site-header header">
+        <div class="container">
+            <div class="header__inner">
+                <img src="./images/image/myteamheader.svg" alt="the logo of myteam" class="logo">
+                <button class="header__btn"></button>
+            </div>
+        </div>
     </header>
     <!-- site header finish -->
 
     <!-- site main start -->
     <main class="site-main">
+        <section class="hero">
+            <div class="container">
+                <div class="hero__inner">
+                    <h1 class="hero__title">Find the best <strong class="hero__title-strong">talent</strong></h1>
+                    <p class="hero__desc">Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.</p>
+                </div>
+            </div>
+        </section>
 
+        <section class="services">
+            <div class="container">
+                <div class="services__inner">
+                    <div class="services__title-box">
+                        <h2 class="services__title">
+                            Build & manage distributed teams like no one else.
+                        </h2>
+                    </div>
+                    <ul class="services__list">
+                        <li class="services__item">
+                            <strong class="services__item-title">Experienced Individuals</strong>
+                            <p class="services__desc">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+                        </li>
+                        <li class="services__item">
+                            <strong class="services__item-title">Easy to Implement</strong>
+                            <p class="services__desc">Our processes have been refined over years of implementation meaning our teams always deliver.</p>
+                        </li>
+                        <li class="services__item">
+                            <strong class="services__item-title">Enhanced Productivity</strong>
+                            <p class="services__desc">Our customized platform with in-built analytics helps you manage your distributed teams.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- site main finish -->
 
